Papi placeholders in GUI + bedrock generator